--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
 <p style="margin-top: 15px">The 8th PRME Asia Forum aims to broaden this conversation, by bringing together management and leadership from universities, management schools, corporates and civil society from the Asia-pacific region. The Forum is open to academic and corporate and social sector audiences, and not limited to members of the PRME Chapter in the region or signatories of the UN-supported PRME.</p>
 
 <p >SPJIMR will host the forum between 12- 14 December, 2018 in Mumbai, India.</p> 
-Contact email id: <p style="text-decoration: underline; text-decoration-color: #3b1e9a;display: inline"> prme.asiaforum@spjimr.org </p>
+<i class="fa fa-envelope w3-xxxlarge" style="font-size: 18px !important; "></i> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;display: inline"> prme.asiaforum@spjimr.org </p>
 
 
       </div>
