--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -36,17 +36,16 @@
       <div class="column-6 w-col w-col-6">
         <div class="card" style="height: 140px !important;">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
-            <div class="w-col w-col-9" style="margin-top: 20px;">
-              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Deepa Krishnan</h4>
-              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head of Abhyudaya, SPJIMR
-              </h5>
+            <div class="w-col w-col-3"><img src="../ProfAditiDivatia.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="column-7 w-col w-col-9" style="margin-top: 20px;">
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Aditi Divatia</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor, SPJIMR</h5>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class=" w-row">
+    <div class="row-2 w-row">
       <div class="column-6 w-col w-col-6">
         <div class="card" style="height: 140px !important;">
           <div class="row-12 w-row">
@@ -71,5 +70,21 @@
         </div>
       </div>
     </div>
+
+    <div class=" w-row"> 
+    <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-9" style="margin-top: 20px;">
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Deepa Krishnan</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head of Abhyudaya, SPJIMR
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+
   </div>
 </div>
