--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -928,7 +928,8 @@ She has been involved in national and state level policy making work and has had
   <div class="collapsible-content9">
     <div class="content-inner5">
       <p style="font-size: 14px; text-align: justify;">
-               Content coming soon
+               Prof Kartik Dave is PhD in Marketing Management from M L S University, Udaipur.  He brings in-rich experience around 20 years in industry and academics. Prof Dave is presently associated with Ambedkar University New Delhi (AUD), where he has been serving as a Professor and Dean of School of Business, Public Policy and Social Entrepreneurship (SBPPSE). He has been involved in teaching, training and research activities. He had been associated as visiting professor at Neoma Business School, France and ETEA, Spain. He has developed new courses like Challenges in Marketing in Emerging Markets, Services Excellence etc. His areas of teaching are Services Marketing, Marketing Management, Marketing Strategy, Retail Marketing, Branding, Social Media Marketing etc.  His research interest lies in Marketing Management, Services Marketing, Branding, Luxury Marketing, Human dimension in Marketing, Inclusive Marketing, Green Marketing, Social Media Marketing, Interdisciplinary issues in Marketing, Marketing to kids, Employability, Wellness Marketing, Retailing and Shopping, Customer analysis, Internationalization in Higher Education, Management Education in India, Quality and Accreditation issues. Professor Dave has published two books and many research papers, cases and articles in academic journals and newspapers in India and abroad. He has been writing in International journals of repute published by Wiley, Inderscience Publications, Emerald, Springer Gabler, ScienceDirect etc. He has been serving as an advisor and member in many editorial and review boards of reputed journals. 
+
 
               </p>
     </div>
