--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -105,7 +105,7 @@
                       <div class="container">
                         <a href="trackchairs#9">
                         <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Santosh Kumar</h4></a>
-                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(Santosh.kumar@aurouniversity.edu.in)</p>
+                        <h5 class="heading-10" style="font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(Santosh.kumar @aurouniversity.edu.in)</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Head, Public Policy, School of Liberal Arts and Human Sciences</h5>
                         <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Auro University</h5>
                       </div>
@@ -114,15 +114,15 @@
                 </div>
               </div>
               <div class="w-col w-col-6">
-                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
                 </h4>
                 <p style="text-align: justify;">
-                The 2030 Agenda for Sustainable Development, adopted at the United Nations in 2015, sets out an ambitious plan of action with the overarching objective of leaving no one behind. At its core are 17 Sustainable Development Goals (SDGs) comprising 169 targets to be achieved by 2030. These 17 Goals build on the experiences of the Millennium Development Goals, while including new areas such as climate change, economic inequality, innovation, sustainable consumption, peace and justice, among other priorities. The goals are interconnected – often the key to success on one goal will involve tackling issues more commonly associated with another. It is also important to note that successful implementation of SDGs will require partnership among all stakeholders e.g. Government, NGOs, Businesses, Civil Society and Academia, etc.  <br>
-                If we talk about Asia and Pacific region, it is important to note that some SDGs have registered positive progress, particularly towards Goal 9 - focused on industry, innovation and infrastructure. However, Asia and the Pacific has failed to reduce inequalities within and among countries (SDG 10) and inequalities have widened since 2000. Regional progress towards SDGs focused on promoting environmental sustainability has been insufficient across the board. <br>
-                In this context, it is pertinent to deliberate and understand what progress, so far, have been made, and how multi-stakeholder integrated approach can be adopted to advance the 2030 agenda. This session will thus provide a platform to foster dialogues with regard to SDG implementation and exploring the best practices. The session will try to see how the businesses are integrating the SDGs framework for future growth. How can business work with governments to develop policy frame9work to achieve 2030 agenda? How academia and civil society can help in advancing the 2030 agenda? What are some successful examples of collective action in this regard?  <br>
+                The 2030 Agenda for Sustainable Development, adopted at the United Nations in 2015, sets out an ambitious plan of action with the overarching objective of leaving no one behind. At its core are 17 Sustainable Development Goals (SDGs) comprising 169 targets to be achieved by 2030. These 17 Goals build on the experiences of the Millennium Development Goals, while including new areas such as climate change, economic inequality, innovation, sustainable consumption, peace and justice, among other priorities. The goals are interconnected – often the key to success on one goal will involve tackling issues more commonly associated with another. It is also important to note that successful implementation of SDGs will require partnership among all stakeholders e.g. Government, NGOs, Businesses, Civil Society and Academia, etc.  <br> <br>
+                If we talk about Asia and Pacific region, it is important to note that some SDGs have registered positive progress, particularly towards Goal 9 - focused on industry, innovation and infrastructure. However, Asia and the Pacific has failed to reduce inequalities within and among countries (SDG 10) and inequalities have widened since 2000. Regional progress towards SDGs focused on promoting environmental sustainability has been insufficient across the board. <br> <br>
+                In this context, it is pertinent to deliberate and understand what progress, so far, have been made, and how multi-stakeholder integrated approach can be adopted to advance the 2030 agenda. This session will thus provide a platform to foster dialogues with regard to SDG implementation and exploring the best practices. The session will try to see how the businesses are integrating the SDGs framework for future growth. How can business work with governments to develop policy framework to achieve 2030 agenda? How academia and civil society can help in advancing the 2030 agenda? What are some successful examples of collective action in this regard?  <br> <br>
                 The papers are invited in the following specific areas: <br>
                 <li>
-                  Policy formwork for the SDGs in Asia region and progress 
+                  Policy framework for the SDGs in Asia region and progress 
                 </li>
                 <li>
                   The role of  Businesses in the implementation of SDGs (Invited Guests)
@@ -187,7 +187,7 @@
                 </div>
               </div>
               <div class="w-col w-col-6">
-                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
                 </h4>
                 <p style="text-align: justify;">
                 Content coming soon.
@@ -246,7 +246,7 @@
               </div>
               <div class="column-7 w-col w-col-7">
               <div class="column-11 w-col w-col-11">
-                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
                 Content coming soon.
@@ -305,7 +305,7 @@
               </div>
               <div class="column-7 w-col w-col-7">
               <div class="column-11 w-col w-col-11">
-                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
                 Content coming soon.
@@ -369,10 +369,27 @@
                 </div>
               </div>
               <div class="w-col w-col-6">
-                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
                 </h4>
                 <p style="text-align: justify;">
-                Content coming soon.
+                Universities and Business schools across the globe have been facing a lot of criticism regarding student learning experiences, research focus and curriculum design which are inadequate to meet challenges of business and society.  These institutions are now pondering over the right direction of Management Education for the future.  <br> <br>
+Unprecedented development in geopolitical relationships, global economy, natural environment, climate change, complex social issues, cultural diversity and technological intervention have been significant dimensions for the rethinking of management education.
+It is imperative to visualize the bigger canvas for the management education in order to deal not only with complexity of business world but also issues related to sustainability. <br> <br>
+This track will attempt to deliberate on growing concerns related to research, innovation and outreach for the management education for the future. It will also discuss the issues of technology integration, access to management education, skill development, employability, Quality, leadership development, social and cultural sensitivity in the Global and Asian context.    <br> <br>
+
+The track themes include, but are not limited to: <br> 
+
+<li>Management Education: Challenges and Innovations in Asian and Indian context</li>
+<li>Management Education: Reforms, Skill Development and Productivity</li>
+<li>Quality, Accreditation and Internationalization  in Management Education</li>
+<li>Interdisciplinary and Trans-disciplinary Research for Responsible Management Education</li>
+<li>Technological Intervention in Management Education </li>
+<li>Management Education and Sustainability</li>
+<li>Continuing Management Education: Trends, Scope and Future Direction</li>
+<li>Responsible Leadership for the future of management education</li>
+<li>Fostering Innovative Ecosystem in Management Education : Collaboration, dialogue and managing culture diversity</li>
+<li>Management Education: Vision 2030</li>
+
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div></div>
@@ -424,11 +441,11 @@
               </div>
               <div class="column-7 w-col w-col-7">
               <div class="column-11 w-col w-col-11">
-                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
                 In the last decades there has been a fundamental change in the way development strategies are approached. Development is not seen as the outcome of State led initiatives or donor driven programmes but developmental outcomes are now closely linked to the functioning of the market economy. Making people capable of participating in the market by building their capacities, by facilitating linkages with the market by providing timely credit and information etc. seem to be The developmental funding is increasingly seen as social investment where social mission and social change are not the only objectives of investment but financial sustainability of such initiatives is also considered to be important. Thus, social and financial (environmental inclusive) returns on investments are becoming the indicators of sustainable development. 
- <br>
+ <br> <br>
 Social Entrepreneurs are the professionals to manage investments of financial and social capital to bring social change through market driven mechanisms. Interestingly, despite being market driven phenomenon social entrepreneurship is equally pursued by the governments from across the globe as drivers of innovation to solve complex social problems that the countries face today. Social entrepreneurs and social enterprises create value in the society while pursuing the most compelling and/or neglected societal issues. Though social entrepreneurship is a vehicle for creation of social change, the role of individuals, their cognition and capabilities cannot be ignored. Social entrepreneurs, as individuals, feel confident and believe in their capabilities to take actions to create social change. Their self-efficacy depend their technological knowledge, experience, verbal persuasion, and psychological and affective states, and social network. Prior knowledge, social network and identity of entrepreneurs, though not necessary and can be learnt, provide some inherent advantage in efficient and effective implementation of their plans.  
 
               </p>
@@ -485,11 +502,11 @@ Social Entrepreneurs are the professionals to manage investments of financial an
               </div>
               <div class="column-7 w-col w-col-7">
               <div class="column-11 w-col w-col-11">
-                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description : </p>
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
                 Asia consists of a large number of emerging economies.  Since the early 1990s, about a billion people in Asia have been lifted out of poverty.  Nevertheless, many are still left behind.  At the same time, the drive to achieve economic development has put immense pressure on both the social and the environmental fronts.  The ambitious, comprehensive and interconnected nature of the 2030 Agenda poses to us all tough questions about the challenges and opportunities ahead.  Can we build sustainable prosperity such that everyone has a chance to flourish and future generations are not left with depleted resources?   <br>
-                
+                <br>
                 Examples of questions to examine in this track include: <br>
                 <li style="text-align: justify">
                   Does economic development necessarily mean trade-offs in the social and environmental dimensions?  Can the development of social agenda (e.g., gender equality, quality education, quality healthcare) and environmental preservation (e.g., affordable and renewable energy, circular economy) be opportunities for economic development? 
