--- a/app/views/home/workshopdetails.html.erb
+++ b/app/views/home/workshopdetails.html.erb
@@ -31,7 +31,7 @@
                   </div>
                   <div class="w-col w-col-9" style="margin-top: 20px;">
                       <h5 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Chair- Dr. Nirja Mattoo</h5>
-                      <h6 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">Chairperson, Centre for Development of Corporate Citizenship (C-DoCC) </h6>
+                      <h6 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">Chairperson, <br> Centre for Development of Corporate Citizenship (C-DoCC) </h6>
                       <h6 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">SPJMR</h6>
                   </div>
                   </div>
