--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -66,7 +66,7 @@
 }
     
 
-#list2 ol li p { padding:8px; font-style:normal; border-left: 1px solid #999; }
+/*#list2 ol li p { padding:8px; font-style:normal; border-left: 1px solid #999; }
 /*#list2 ol li p em { display:block; }*/
     .table-fill {
   background: white;
@@ -178,13 +178,38 @@ td.text-center {
 
 td.text-right {
   text-align: right;
-}
+}*/
     </style>
 <%end%> 
 <div style="margin-bottom: 100px;">
-  <div class="heading-tittle color-black w-container">
-    <h2 class="-5" style="margin: 30px 0px 30px 0px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Applications</p></h2>
-  </div>
+
+      <div class="heading-tittle color-black w-container" style="max-width: none !important;">
+          <div>
+      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider" >
+        <div class="w-slider-mask">
+         <!--  
+          <div class="slide-2 w-slide">
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+              
+            </a>
+          </div> -->
+          <div class="slide-6 w-slide"></div>
+          <!-- <div class="slide-6 w-slide"></div> -->
+        </div>
+        <div class="w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-slider-nav w-round"></div>
+      </div>
+      <div class="w-container"></div>
+     <h2 class="-5" style="margin: 30px 0px 30px 0px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Applications</p></h2>
+    </div>
+      
+    </div>
+  
           <div class="row">
             <div class="" style="padding: 10px; text-align: justify;">
               <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> WHO CAN PARTICIPATE?</p></h4>
