--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -237,8 +237,34 @@ input[type='checkbox'] {
     </style>
 <%end%> 
 <div>
-  <div class="heading-tittle color-black w-container">
-    <h2 class="-5" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Co chairs</p></h2>
+  
+        <div class="heading-tittle color-black w-container" style="max-width: none !important;">
+          <div>
+      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider" >
+        <div class="w-slider-mask">
+         <!--  
+          <div class="slide-2 w-slide">
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+              
+            </a>
+          </div> -->
+          <div class="slide-6 w-slide"></div>
+          <!-- <div class="slide-6 w-slide"></div> -->
+        </div>
+        <div class="w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-slider-nav w-round"></div>
+      </div>
+      <div class="w-container"></div>
+     <h2 class="-5" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Co chairs</p></h2>
+    </div>
+      
+    </div>
+    
     <div class="row-2 w-row">
       <div class="column-6 w-col w-col-6">
         <div class="card-track">
@@ -246,9 +272,9 @@ input[type='checkbox'] {
             <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sandip Anand</h4>
-              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Founding Associate Dean
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor, Xavier Institute of Management
               </h5>
-              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Doctoral Programs</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Founding Associate Dean, Doctoral Programs</h5>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Xavier University Bubaneswar</h5>
             </div>
           </div>
@@ -278,7 +304,8 @@ input[type='checkbox'] {
             <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sapna Narula</h4>
-              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head in the Department of Business Sustainability</h5>
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor & Head</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Deptt of Business and Sustainability</h5>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">TERI School of Advanced Studies</h5>
             </div>
           </div>
