--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -27,9 +27,9 @@
           <div class="row-5 w-row">
             <div class="w-col w-col-9" style="margin-left: 20px;">
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Dr. Chandrika Parmar</h4>
-              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Associate Professor
+              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Associate Professor, SPJIMR
               </h5>
-              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">E-mail : chandrika.parmar@spjimr.org</h5>
+              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;"><i class="fa fa-envelope w3-xxxlarge" style="font-size: 18px !important; "></i> chandrika.parmar@spjimr.org</h5>
             </div>
           </div>
         </div>
@@ -40,7 +40,7 @@
             <div class="column-7 w-col w-col-9" style="margin-left: 20px;">
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Ms. Ranjeeta Bhattacharya</h4>
               <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Research Associate, SPJIMR</h5>
-              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">E-mail : prme.asiaforum@spjimr.org</h5>
+              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;"><i class="fa fa-envelope w3-xxxlarge" style="font-size: 18px !important; "></i>  prme.asiaforum@spjimr.org</h5>
               
             </div>
           </div>
