--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -30,9 +30,37 @@
   
   </div>
   <div class="jquery-script-clear"></div>
-  <div class="heading-tittle color-black w-container" style="margin-top: 0px;">
-<h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">COLLOQIUM PROGRAMME SCHEDULE  </p></h2>
-</div>
+
+
+      <div class="heading-tittle color-black w-container" style="max-width: none !important;">
+          <div>
+      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider" >
+        <div class="w-slider-mask">
+         <!--  
+          <div class="slide-2 w-slide">
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+              
+            </a>
+          </div> -->
+          <div class="slide-6 w-slide"></div>
+          <!-- <div class="slide-6 w-slide"></div> -->
+        </div>
+        <div class="w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-slider-nav w-round"></div>
+      </div>
+      <div class="w-container"></div>
+     <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">COLLOQIUM PROGRAMME SCHEDULE  </p></h2>
+    </div>
+      
+    </div>
+ 
+
+
 <div class="card-new" style="    box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2) !important; padding: 10px;">
 <main>
       <section class="page-section">
@@ -42,7 +70,7 @@
       <div class="timeline__items">
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>09:30 - 10:30 a.m.</h2>
+      <h2>09:30 a.m. - 10:30 a.m.</h2>
       <p>Registration</p>
       </div>
       </div>
@@ -56,19 +84,19 @@
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>12:30 - 1:00 pm</h2>
+      <h2>12:30 p.m. - 1:00 pm</h2>
       <p> Poster presentation session</p>
       </div>
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>2:00 - 4:00 pm</h2>
+      <h2>2:00 p.m. - 4:00 pm</h2>
       <p>Paper presentations</p>
       </div>
       </div>
       <div class="timeline__item">
       <div class="timeline__content">
-      <h2>4:15 - 4:45 pm</h2>
+      <h2>4:15 p.m. - 4:45 pm</h2>
       <p>Valedictory session</p>
       </div>
       </div>
