--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -12,7 +12,7 @@
      }
 /* LIST #3 */
 #list3 { }
-#list3 ul { list-style-image: url("../arrow-right.svg"); color:#000; font-size:16px; }
+/*#list3 ul { list-style-image: url("../arrow-right.svg"); color:#000; font-size:16px; }*/
 #list3 ul li { line-height:30px; }
 
 @media only screen and (max-width: 1280px) {
