--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -830,7 +830,14 @@ input[type='checkbox'] {
   <div class="collapsible-content6">
     <div class="content-inner6">
       <p style="font-size: 14px; text-align: justify;">
-               Content coming soon
+               Dr. Anshul Verma is an Associate Professor in Finance area at SPJIMR. Previously, he worked as Associate Professor and Chairperson(PGDM-Executive) at IMT, Ghaziabad. Prior to IMT, Ghaziabad, he worked as Associate Professor in Accounting and Finance Area and Associate Programme Head for PGEMP Programme at SPJIMR. He also worked for Birla Institute of Management Technology, Greater Noida. 
+ <br> <br>
+Dr. Verma holds double Master's degree, in Management with Specialisation in Finance from Birla Institute of Management Technology and in Economics from Dr. B. R. Ambedkar University, Agra and dual Ph. D. in area of Credit Risk Management and in area of Applied Business Economics from Dr. B. R. Ambedkar University, Agra.
+<br> <br>
+He has more than 16 years of experience in teaching, training and research in area of Accounting and Finance and also in Administration in top ranked Business Schools in India. He has published research papers in with international publications like Emerald, Inderscience and Elsevier and in journals of national repute. 
+
+
+
 
               </p>
     </div>
