--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -539,5 +539,70 @@ Social Entrepreneurs are the professionals to manage investments of financial an
       </div>
 </div>
 
+<div id="12" style="height: 800px; margin-bottom: 50px;">
+        <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;"><u>SUSTAINABLE BUSINESSES</u><br></h4>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chairs : </p>
+                </h4>
+                <div class="row-5">
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important;">
+                      <img src="../Dr.-Sapna-Narula.jpg" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                      <div class="container">
+                       <a href="">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sapna A. Narula</h4>
+                        </a>
+                        <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(divyasinghal@gim.ac.in)</p>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor & Head</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Dept. of Business and Sustainability</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">TERI School of Advanced Studies</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important; height: 460px;">
+
+                      <img src="" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                      <div class="container">
+                        <a href="">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Zinaidi Fadeeva</h4></a>
+                       
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Senior Advisor on Sustainable Consumption and Production</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">UNRC</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                </h4>
+                <p style="text-align: justify;">
+                Content coming soon.
+              </p>
+              </div>
+              <div class="column-1 w-col w-col-1"></div></div>
+              <div class="column-4 w-col w-col-4"></div>
+             <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
+               <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+             </div>
+              
+             
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+ 
+
 
 </div>
