--- a/app/views/home/hotels.html.erb
+++ b/app/views/home/hotels.html.erb
@@ -46,25 +46,26 @@
             <div class="" style="padding: 10px; text-align: justify;">
               <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> LUXURY HOTELS :</p></h4>
                   <div class="row-3 w-row">
-      <div class="column-4 w-col w-col-4">
+      <div class="column-4 w-col w-col-4" >
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
             <div class="w-col w-col-9" style="margin-left: 20px;">
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Sun n Sand</h4>
               <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Juhu, Vile Parle
               </h5>
-              <div class="row-5 w-row" style="margin-bottom: 10px;">
-                <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.2 KMS </p></button>
+              <div class="row-5 w-row" style="margin-bottom: 10px; text-align: center">
+
+                <div class="column-4 w-col w-col-4" style="text-align: center">
+                  <button class="all_btn" style="padding:20px 12px 0px 12px;"> <p style="font-size: 10px">3.2 KMS </p></button>
                 </div>
-                <div class="column-4 w-col w-col-4">
+                <div class="column-4 w-col w-col-4" style="text-align: center">
                   <a href="http://www.sunnsandhotel.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
                   </a>
                 </div>
-                <div class="column-4 w-col w-col-4">
+                <div class="column-4 w-col w-col-4" style="text-align: center; margin-left: 20px;">
                   <a href="https://goo.gl/maps/RpVZvxgQgVK2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
                 </div>
               </div>
@@ -133,6 +134,8 @@
           </div>
         </div>
     </div>
+  </div>
+  <div class="row-3 w-row">
           <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -220,6 +223,8 @@
           </div>
         </div>
     </div>
+  </div>
+  <div class="row-3 w-row">
           <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -307,9 +312,11 @@
           </div>
         </div>
     </div>
+  </div>
             </div>
             <div class="" style="padding: 10px; text-align: justify;">
               <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;">BUDGET HOTELS :</p></h4>
+<div class="row-3 w-row">
         <div class="column-4 w-col w-col-4">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -339,6 +346,7 @@
           </div>
         </div>
       </div>
+    
       <div class="column-4 w-col w-col-4">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -396,7 +404,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </div></div>
+      <div class="row-3 w-row">
       <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -484,35 +493,9 @@
           </div>
         </div>
       </div>
-      <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
-        <div class="card-track" style="height: none">
-          <div class="row-5 w-row">
-            <div class="w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Ontime Hospitality Service Apartments</h4>
-              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Andheri West
-              </h5>
-              <div class="row-5 w-row" style="margin-bottom: 10px;">
-                <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.4 KMS </p></button>
-                </div>
-                <div class="column-4 w-col w-col-4">
-                  <a href="http://www.ontimeapartments.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
-                  </a>
-                </div>
-                <div class="column-4 w-col w-col-4">
-                  <a href="https://goo.gl/maps/kxPCd8VQgPD2" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
-                  </a>
-                </div>
-              </div>
+    </div>
+    <div class="row-3 w-row">
 
-              
-              
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
         <div class="card-track" style="height: none">
           <div class="row-5 w-row">
@@ -531,35 +514,6 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://goo.gl/maps/oMjtBmjXiqn" target="_blank">
-                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
-                  </a>
-                </div>
-              </div>
-
-              
-              
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
-        <div class="card-track" style="height: none">
-          <div class="row-5 w-row">
-            <div class="w-col w-col-9" style="margin-left: 20px;">
-              <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Alfa International</h4>
-              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Juhu Beach
-              </h5>
-              <div class="row-5 w-row" style="margin-bottom: 10px;">
-                <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">5.0 KMS </p></button>
-                </div>
-                <div class="column-4 w-col w-col-4">
-                  <a href="http://www.hotelalfainternational.com/" target="_blank">
-                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
-                  </a>
-                </div>
-                <div class="column-4 w-col w-col-4">
-                  <a href="https://goo.gl/maps/Lp7McLGQG8s" target="_blank">
                   <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
                   </a>
                 </div>
@@ -600,6 +554,73 @@
           </div>
         </div>
       </div>
+      <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
+        <div class="card-track" style="height: none">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-9" style="margin-left: 20px;">
+              <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Alfa International</h4>
+              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Juhu Beach
+              </h5>
+              <div class="row-5 w-row" style="margin-bottom: 10px;">
+                <div class="column-4 w-col w-col-4">
+                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">5.0 KMS </p></button>
+                </div>
+                <div class="column-4 w-col w-col-4">
+                  <a href="http://www.hotelalfainternational.com/" target="_blank">
+                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  </a>
+                </div>
+                <div class="column-4 w-col w-col-4">
+                  <a href="https://goo.gl/maps/Lp7McLGQG8s" target="_blank">
+                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  </a>
+                </div>
+              </div>
+
+              
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row-3 w-row">
+      
+
+
+
+
+
+            <div class="column-4 w-col w-col-4" style="margin-top: 20px;">
+        <div class="card-track" style="height: none">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-9" style="margin-left: 20px;">
+              <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Ontime Hospitality Service Apartments</h4>
+              <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Andheri West
+              </h5>
+              <div class="row-5 w-row" style="margin-bottom: 10px;">
+                <div class="column-4 w-col w-col-4">
+                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.4 KMS </p></button>
+                </div>
+                <div class="column-4 w-col w-col-4">
+                  <a href="http://www.ontimeapartments.com/" target="_blank">
+                  <button class="all_btn" style="    padding: 13px 20px; font-size: 24px;"><i class="fa fa-globe"></i></button>
+                  </a>
+                </div>
+                <div class="column-4 w-col w-col-4">
+                  <a href="https://goo.gl/maps/kxPCd8VQgPD2" target="_blank">
+                  <button class="all_btn" style="  padding: 17px 20px; font-size: 10px;"><i class="material-icons">place</i></button>
+                  </a>
+                </div>
+              </div>
+
+              
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
             </div>
           </div>
 
