--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -74,7 +74,7 @@
     	    <b> December 12th, 2018.  </b>
     	</h6>
     </div>
-    <div class="row-3" style="margin-top: 20px;">
+    <div class="row-2 w-row" style="margin-top: 20px;">
       <div class="column-6 w-col w-col-6">
          <div class="card-details" style="padding: 10px;">
           <div class="row-12 w-row">
