--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -304,7 +304,7 @@ td.text-right {
 
 
             </div>
-            <button id="btnSubmit" class="button" style="margin-top: 20px;float: right"><span>Make a Payment</span></button>
+            <!-- <button id="btnSubmit" class="button" style="margin-top: 20px;float: right"><span>Make a Payment</span></button> -->
           </div>
         </div>
       </div>
