--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -70,7 +70,7 @@
 
 </div>
         
-        <div class="row-2" style="margin-bottom: 200px;">
+        <div class="row-2 w-row" style="margin-bottom: 200px;">
           <div class="column-6 w-col w-col-6">
             <div class="card-new" style="height: 260px; padding: 20px;">
             <div id="list3">
@@ -94,7 +94,7 @@
             <li>
               <a href="/trackdetails#7">Innovating on Pedagogy and Curriculum</a>
             </li>
-            <li><a href="/trackdetails#12">Management Education for Future</a></li>
+            <li><a href="/trackdetails#13">Management Education for Future</a></li>
             <li><a href="">Re-thinking CSR</a></li>
             <li><a href="/trackdetails#9">Social Entrepreneurship</a> </li>
             <li><a href="">Social Impact Investing </a></li>
