--- a/app/views/home/hotels.html.erb
+++ b/app/views/home/hotels.html.erb
@@ -32,10 +32,24 @@
 .all_btn:hover {
     background-color: #6e6e6e;
 }
+
+.all_btn1 {
+    background-color: #3a3a3a;
+    border: none;
+    color: white;
+    /*padding: 12px 16px;*/
+    font-size: 16px;
+    cursor: auto;
+    border-radius: 50%;
+    text-align: center;
+}
+
+
     </style>
 <%end%> 
 
   
+
 
 
 <div style="margin-bottom: 100px;">
@@ -56,7 +70,7 @@
               <div class="row-5 w-row" style="margin-bottom: 10px; text-align: center">
 
                 <div class="column-4 w-col w-col-4" style="text-align: center">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px;"> <p style="font-size: 10px">3.2 KMS </p></button>
+                  <button class="all_btn1" style="padding:20px 12px 0px 12px;"> <p style="font-size: 10px">3.2 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4" style="text-align: center">
                   <a href="http://www.sunnsandhotel.com/" target="_blank">
@@ -85,7 +99,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.9 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">3.9 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.marriott.com/hotels/travel/bomjw-jw-marriott-mumbai-juhu/" target="_blank">
@@ -115,7 +129,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">7.5 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">7.5 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.hyatt.com/en-US/hotel/india/hyatt-regency-mumbai/mumba" target="_blank">
@@ -147,7 +161,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">2.9 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">2.9 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.accorhotels.com/gb/hotel-6926-novotel-mumbai-juhu-beach/index.shtml" target="_blank">
@@ -177,7 +191,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">6.0 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">6.0 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.theleela.com/en_us/hotels-in-mumbai/the-leela-mumbai-hotel/" target="_blank">
@@ -207,7 +221,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">4.6 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">4.6 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.marriott.com/hotels/travel/bomcy-courtyard-mumbai-international-airport/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2" target="_blank">
@@ -239,7 +253,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">5.7 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">5.7 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.thelalit.com/the-lalit-mumbai/" target="_blank">
@@ -269,7 +283,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">6.1 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">6.1 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.itchotels.in/hotels/mumbai/itcmaratha.html" target="_blank">
@@ -299,7 +313,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">4.7 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">4.7 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.ramadaplaza-juhu.com/" target="_blank">
@@ -334,7 +348,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.1 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">3.1 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelkarl.com/" target="_blank">
@@ -365,7 +379,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">4.6 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">4.6 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.fabhotels.com/hotels-in-mumbai/fabhotel-byaris-international.html?utm_source=Google_Maps&utm_medium=organic&utm_campaign=Google_Maps_Clicks" target="_blank">
@@ -395,7 +409,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">2.7 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">2.7 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="https://www.oyorooms.com/13814-budget-oyo-8373-rigga-inn-mumbai?utm_source=Google_gmb&utm_medium=Organic&utm_campaign=MUM536" target="_blank">
@@ -426,7 +440,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.8 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">3.8 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelbeachgarden.com/" target="_blank">
@@ -456,7 +470,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">1.4 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">1.4 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://hoteldelightmumbai.in/" target="_blank">
@@ -486,7 +500,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">2.2 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">2.2 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://hotelparkviewmumbai.com/" target="_blank">
@@ -519,7 +533,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">2.3 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">2.3 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="hotelmidtownindia.com" target="_blank">
@@ -549,7 +563,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">5.7 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">5.7 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.milanintl.com/" target="_blank">
@@ -579,7 +593,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">5.0 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">5.0 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.hotelalfainternational.com/" target="_blank">
@@ -616,7 +630,7 @@
               </h5>
               <div class="row-5 w-row" style="margin-bottom: 10px;">
                 <div class="column-4 w-col w-col-4">
-                  <button class="all_btn" style="padding:20px 12px 0px 12px"> <p style="font-size: 10px">3.4 KMS </p></button>
+                  <button class="all_btn1" style="padding: 20px 12px 0px 12px;"><p style="font-size: 10px;">3.4 KMS </p></button>
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.ontimeapartments.com/" target="_blank">
