--- a/app/views/home/prme.html.erb
+++ b/app/views/home/prme.html.erb
@@ -20,7 +20,7 @@
         <h2><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">PRME</p></h2>
     </div>
 
-    <div class="row-7">
+    <div class="row-2 w-row">
         <div class="w-col w-col-3">
             <a href="http://www.unprme.org/" target="_blank">
             <img src="../UNPRMELogo.png" class="image-6"> 
