--- a/app/views/home/spjimr.html.erb
+++ b/app/views/home/spjimr.html.erb
@@ -19,7 +19,7 @@
     <div class="heading-tittle color-black w-container" style="margin-top: 30px; margin-bottom: 30px;">
             <h2><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">SPJIMR</p></h2>
           </div>
-    <div class="row-7">
+    <div class="row-2 w-row">
         <div class="w-col w-col-3">
             <a href="http://spjimr.org/" target="_blank">
                 <img src="../spjimr.png" class="image-6"> 
