--- a/app/views/home/sponsors.html.erb
+++ b/app/views/home/sponsors.html.erb
@@ -20,7 +20,7 @@
         <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Sponsorship</p></h2>
     </div>
     
-          <div class="row-7">
+          <div class="row-2 w-row">
         <div class="w-col w-col-3">
             <a href="http://spjimr.org/" target="_blank">
                 <img src="../get-money.png" class="image-6" style="    height: 200px;
