--- a/app/views/home/unglobal.html.erb
+++ b/app/views/home/unglobal.html.erb
@@ -10,6 +10,7 @@
           line-height: 10px;
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
+
      }
     
 
@@ -19,7 +20,7 @@
       <div class="heading-tittle color-black w-container" style="margin-top: 30px; margin-bottom: 30px;">
         <h2 class=""><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">UN GLOBAL COMPACT</p></h2>
     </div>
-    <div class="row-7">
+    <div class="row-2 w-row">
     	<div class="w-col w-col-3">
             <a href="https://www.unglobalcompact.org/" target="_blank">
     		  <img src="../UNGCLogo.png" class="image-6">	
