--- a/app/views/home/workshopdetails.html.erb
+++ b/app/views/home/workshopdetails.html.erb
@@ -20,7 +20,7 @@
         <h2 class="-5"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Workshop Details</p></h2>
     </div>
 
-          <div class="row-2">
+          <div class="row-2 w-row">
             <div class="column-6 w-col w-col-6">
               <div class="card-track" style="padding: 10px; text-align: justify;">
                 <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;"> <u> Experiential learning: Towards developing leaders</u></h4>
