--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>  -->
       <meta charset="utf-8">
   
-  <meta content="All Layouts" property="og:title">
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="Webflow" name="generator">
   <link href="../normalize.css" rel="stylesheet" type="text/css">
@@ -30,6 +30,15 @@
   <script src="../webflow.js" type="text/javascript"></script>
   <script type="text/javascript" src="../timeline.min.js"></script>
   <script src="https://www.paynimo.com/paynimocheckout/client/lib/jquery.min.js" type="text/javascript"></script>
+
+
+  <meta property="og:url"           content="http://prmeasia.spjimr.org/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="The 8th PRME ASIA Forum" />
+  <meta property="og:description"   content="The 8th PRME Asia Forum aims to broaden this conversation, by bringing together management and leadership from universities, management schools, corporates and civil society from the Asia-pacific region. The Forum is open to academic and corporate and social sector audiences, and not limited to members of the PRME Chapter in the region or signatories of the UN-supported PRME." />
+  <!-- <meta property="og:image"         content="../UNPRME.jpg" /> -->
+
+
   <%= yield :styles %>
   <%= yield :script %>
   </head>
@@ -37,14 +46,25 @@
 
 
 
-  <body class="body">
+  <body class="body" style="height: 100%;">
   	  <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation-bar dark w-nav">
         <a href="index.html" class="brand-link left-spacing w-nav-brand"></a>
     <nav role="navigation" class="navigation-menu w-nav-menu">
 
       <% if !current_user %>
+  
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
-      <a href="/users/sign_up" class="button-2 w-button">Signup</a>
+  <!-- Your share button code -->
+
+      <a href="/users/sign_up" class="button-2 w-button" style="margin-right: 20px;">Signup</a>
       <a href="/users/sign_in" class="button-3 w-button">Login</a>
       <% elsif %>
 
@@ -198,7 +218,32 @@
 </div>
 
 
+  <div class="footer accent">
+    <div class="w-container">
+      <div style="margin-bottom: 10px;">
+        <a class=" btn-default icon button-2 w-button" href="javascript:void(0)" onclick="window.open( 'http://www.linkedin.com/shareArticle?mini=true&url=http://prmeasia.spjimr.org/', 'sharer', 'toolbar=0, status=0, width=626, height=436');return false;" title="Linkedin" style="background-color: #f2f2f2; padding-bottom: 0px !important; padding-top: 0px !important; margin-right: 0px"><img src="../linkedin-round.png" style="height: 32px; width: 32px;"></a>
 
+
+
+
+
+
+
+
+  <a class="js-social-share twitter button-2 w-button" href="https://twitter.com/intent/tweet?text=“The 8th PRME ASIA FORUM”&url=http://prmeasia.spjimr.org/&via=twitter" target="_blank" style="background-color: #1DA1F2; border-radius: 50%; padding: 0px 8px 0px 8px !important; font-size: 22px;margin-right: 0px !important;"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+</a>
+
+  <div class="fb-share-button button-2 w-button" data-href="http://prmeasia.spjimr.org/" data-layout="button" data-size="small" data-mobile-iframe="true" style="background-color: #f2f2f2; margin-right: 0px !important; margin-top: 7px;">
+    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore" >
+      Share
+    </a>
+  </div>
+</div>
+
+
+      <div class="footer-text">© 2018 by TheBlockRoom . All rights reserved</div>
+    </div>
+  </div>
 
 
   </body>
