social share button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -233,10 +233,8 @@
   <a class="js-social-share twitter button-2 w-button" href="https://twitter.com/intent/tweet?text=“The 8th PRME ASIA FORUM”&url=http://prmeasia.spjimr.org/&via=twitter" target="_blank" style="background-color: #1DA1F2; border-radius: 50%; padding: 0px 8px 0px 8px !important; font-size: 22px;margin-right: 0px !important;"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 </a>
 
-  <div class="fb-share-button button-2 w-button" data-href="http://prmeasia.spjimr.org/" data-layout="button" data-size="small" data-mobile-iframe="true" style="background-color: #f2f2f2; margin-right: 0px !important; margin-top: 7px;">
-    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore" >
-      Share
-    </a>
+  <div class="fb-share-button" data-href="http://prmeasia.spjimr.org/" data-layout="button" data-size="small" data-mobile-iframe="true" style="background-color: #f2f2f2; margin-right: 0px !important; margin-top: 7px;">
+    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fprmeasia.spjimr.org%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
   </div>
 </div>
 
